[package]
name = "dl-translate"
version = "0.1.0"
authors = ["Stéphane Magnenat <stephane.magnenat@enlightware.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Rust-based CLI to query DeepL using an API key"
repository = "https://github.com/enlightware/dl-translate"
homepage = "https://github.com/enlightware/dl-translate"
readme = "README.md"
keywords = ["translator", "DeepL", "cli"]
categories = ["command-line-utilities", "localization", "internationalization", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
toml = "0.5"
anyhow = "1.0"
dirs = "3.0"